src/backend/optix/snapshots/rjit__backend__optix__test__scatter_reduce.snap
---
source: src/backend/optix/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 426428584280470983 with 3 elements
===============================================
Kernel 426428584280470983:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[32]) {

	.reg.b8   %b <12>; .reg.b16 %w<12>; .reg.b32 %r<12>;
	.reg.b64  %rd<12>; .reg.f32 %f<12>; .reg.f64 %d<12>;
	.reg.pred %p <12>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Literal, ty: U32, deps: (0, 0), data: Literal(1), sbt_hash: 0 } =>
	mov.b32 %r4, 0x1;


	// [1]: ScheduleVar { op: Data, ty: U32, deps: (0, 0), data: Buffer(0), sbt_hash: 0 } =>

	// [2]: ScheduleVar { op: Data, ty: U32, deps: (0, 0), data: Buffer(1), sbt_hash: 0 } =>

	// [3]: ScheduleVar { op: Idx, ty: U32, deps: (0, 0), data: None, sbt_hash: 0 } =>
	mov.u32 %r7, %r0;


	// [4]: ScheduleVar { op: Literal, ty: Bool, deps: (0, 0), data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p8, 0x1;


	// [5]: ScheduleVar { op: Gather, ty: U32, deps: (0, 3), data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+16];
	mad.wide.u32 %rd3, %r7, 4, %rd0;
	ld.global.nc.u32 %r9, [%rd3];

	// [6]: ScheduleVar { op: Literal, ty: Bool, deps: (3, 3), data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p10, 0x1;


	// [7]: ScheduleVar { op: Scatter { op: Add }, ty: Void, deps: (3, 7), data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r9, 4, %rd0;
	red.global.add.u32 [%rd3], %r4;

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

