src/backend/optix/snapshots/rjit__backend__optix__test__trace_ray.snap
---
source: src/backend/optix/test.rs
expression: jit.kernel_debug()
---
===============================================
Kernel 18083221478694269213:

.version 8.0
.target sm_86
.address_size 64

.const .align 8 .b8 params[56];
.entry __raygen__cujit(){

	.reg.b8   %b <24>; .reg.b16 %w<24>; .reg.b32 %r<24>;
	.reg.b64  %rd<24>; .reg.f32 %f<24>; .reg.f64 %d<24>;
	.reg.pred %p <24>;

	call (%r0), _optix_get_launch_index_x, ();
	ld.const.u32 %r1, [params + 4];
	add.u32 %r0, %r0, %r1;

body:

	// [0]: ScheduleVar { op: Data, deps: [], ty: Void, param_ty: None, reg: 7, buf: None, tex: None, accel: Some(0), literal: 0, size: 0 } =>

	// [1]: ScheduleVar { op: Literal, deps: [], ty: Bool, param_ty: None, reg: 8, buf: None, tex: None, accel: None, literal: 1, size: 1 } =>
	mov.pred %p8, 0x1;


	// [2]: ScheduleVar { op: Data, deps: [], ty: F32, param_ty: Input, reg: 9, buf: Some(0), tex: None, accel: None, literal: 0, size: 2 } =>
	ld.const.u64 %rd0, [params+8];
	mad.wide.u32 %rd0, %r0, 4, %rd0;
	ld.global.cs.f32 %f9, [%rd0];

	// [3]: ScheduleVar { op: Literal, deps: [], ty: F32, param_ty: None, reg: 10, buf: None, tex: None, accel: None, literal: 1058642330, size: 1 } =>
	mov.b32 %f10, 0x3f19999a;


	// [4]: ScheduleVar { op: Literal, deps: [], ty: F32, param_ty: None, reg: 11, buf: None, tex: None, accel: None, literal: 0, size: 1 } =>
	mov.b32 %f11, 0x0;


	// [5]: ScheduleVar { op: Literal, deps: [], ty: F32, param_ty: None, reg: 12, buf: None, tex: None, accel: None, literal: 0, size: 1 } =>
	mov.b32 %f12, 0x0;


	// [6]: ScheduleVar { op: Literal, deps: [], ty: F32, param_ty: None, reg: 13, buf: None, tex: None, accel: None, literal: 0, size: 1 } =>
	mov.b32 %f13, 0x0;


	// [7]: ScheduleVar { op: Data, deps: [], ty: F32, param_ty: Input, reg: 14, buf: Some(1), tex: None, accel: None, literal: 0, size: 2 } =>
	ld.const.u64 %rd0, [params+16];
	mad.wide.u32 %rd0, %r0, 4, %rd0;
	ld.global.cs.f32 %f14, [%rd0];

	// [8]: ScheduleVar { op: Literal, deps: [], ty: F32, param_ty: None, reg: 15, buf: None, tex: None, accel: None, literal: 981668463, size: 1 } =>
	mov.b32 %f15, 0x3a83126f;


	// [9]: ScheduleVar { op: Literal, deps: [], ty: F32, param_ty: None, reg: 16, buf: None, tex: None, accel: None, literal: 1148846080, size: 1 } =>
	mov.b32 %f16, 0x447a0000;


	// [10]: ScheduleVar { op: Literal, deps: [], ty: F32, param_ty: None, reg: 17, buf: None, tex: None, accel: None, literal: 0, size: 1 } =>
	mov.b32 %f17, 0x0;


	// [11]: ScheduleVar { op: Literal, deps: [], ty: U32, param_ty: None, reg: 18, buf: None, tex: None, accel: None, literal: 255, size: 1 } =>
	mov.b32 %r18, 0xff;


	// [12]: ScheduleVar { op: Literal, deps: [], ty: U32, param_ty: None, reg: 19, buf: None, tex: None, accel: None, literal: 0, size: 1 } =>
	mov.b32 %r19, 0x0;


	// [13]: ScheduleVar { op: TraceRay { payload_count: 5 }, deps: [SVarId(0), SVarId(1), SVarId(2), SVarId(3), SVarId(4), SVarId(5), SVarId(6), SVarId(7), SVarId(8), SVarId(9), SVarId(10), SVarId(11), SVarId(12), SVarId(12), SVarId(12), SVarId(12)], ty: Void, param_ty: None, reg: 6, buf: None, tex: None, accel: None, literal: 0, size: 2 } =>
	ld.const.u64 %rd0, [params+48];
	.reg.u32 %u6_out_<32>;
	.reg.u32 %u6_payload_type, %u6_payload_count;
	mov.u32 %u6_payload_type, 0;
	mov.u32 %u6_payload_count, 5;
call (
%u6_out_0, 
%u6_out_1, 
%u6_out_2, 
%u6_out_3, 
%u6_out_4, 
%u6_out_5, 
%u6_out_6, 
%u6_out_7, 
%u6_out_8, 
%u6_out_9, 
%u6_out_10, 
%u6_out_11, 
%u6_out_12, 
%u6_out_13, 
%u6_out_14, 
%u6_out_15, 
%u6_out_16, 
%u6_out_17, 
%u6_out_18, 
%u6_out_19, 
%u6_out_20, 
%u6_out_21, 
%u6_out_22, 
%u6_out_23, 
%u6_out_24, 
%u6_out_25, 
%u6_out_26, 
%u6_out_27, 
%u6_out_28, 
%u6_out_29, 
%u6_out_30, 
%u6_out_31
), _optix_trace_typed_32, (
%u6_payload_type, 
%rd0, 
%f9, 
%f10, 
%f11, 
%f12, 
%f13, 
%f14, 
%f15, 
%f16, 
%f17, 
%r18, 
%r19, 
%r19, 
%r19, 
%r19, 
%u6_payload_count, 
%u6_out_0,
%u6_out_1,
%u6_out_2,
%u6_out_3,
%u6_out_4,
%u6_out_5,
%u6_out_6,
%u6_out_7,
%u6_out_8,
%u6_out_9,
%u6_out_10,
%u6_out_11,
%u6_out_12,
%u6_out_13,
%u6_out_14,
%u6_out_15,
%u6_out_16,
%u6_out_17,
%u6_out_18,
%u6_out_19,
%u6_out_20,
%u6_out_21,
%u6_out_22,
%u6_out_23,
%u6_out_24,
%u6_out_25,
%u6_out_26,
%u6_out_27,
%u6_out_28,
%u6_out_29,
%u6_out_30,
%u6_out_31
);

	// [14]: ScheduleVar { op: Extract { offset: 0 }, deps: [SVarId(13)], ty: U32, param_ty: None, reg: 5, buf: None, tex: None, accel: None, literal: 0, size: 2 } =>
	mov.b32 %r5, %u6_out_0;

	// [15]: ScheduleVar { op: Cast, deps: [SVarId(14)], ty: Bool, param_ty: Output, reg: 4, buf: Some(2), tex: None, accel: None, literal: 0, size: 2 } =>
	setp.ne.u32 %p4, %r5, 0;

	// Store:
	ld.const.u64 %rd0, [params + 24]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 1, %rd0; // rd0 <- Index * ty.size() + params[offset]
	selp.u16 %w0, 1, 0, %p4;
	st.global.cs.u8 [%rd0], %w0;

	// [16]: ScheduleVar { op: Extract { offset: 3 }, deps: [SVarId(13)], ty: U32, param_ty: None, reg: 21, buf: None, tex: None, accel: None, literal: 0, size: 2 } =>
	mov.b32 %r21, %u6_out_3;

	// [17]: ScheduleVar { op: Bitcast, deps: [SVarId(16)], ty: F32, param_ty: Output, reg: 20, buf: Some(3), tex: None, accel: None, literal: 0, size: 2 } =>
    mov.b32 %f20, %r21;

	// Store:
	ld.const.u64 %rd0, [params + 32]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 4, %rd0; // rd0 <- Index * ty.size() + params[offset]
	st.global.cs.f32 [%rd0], %f20; // (Index * ty.size() + params[offset])[Index] <- var

	// [18]: ScheduleVar { op: Extract { offset: 4 }, deps: [SVarId(13)], ty: U32, param_ty: None, reg: 23, buf: None, tex: None, accel: None, literal: 0, size: 2 } =>
	mov.b32 %r23, %u6_out_4;

	// [19]: ScheduleVar { op: Bitcast, deps: [SVarId(18)], ty: F32, param_ty: Output, reg: 22, buf: Some(4), tex: None, accel: None, literal: 0, size: 2 } =>
    mov.b32 %f22, %r23;

	// Store:
	ld.const.u64 %rd0, [params + 40]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 4, %rd0; // rd0 <- Index * ty.size() + params[offset]
	st.global.cs.f32 [%rd0], %f22; // (Index * ty.size() + params[offset])[Index] <- var

	ret;
}

